# LearningFocused

./: .gitignore  README.md  docker-compose.yml  graph_deep_research_agent_main.mermaid  graph_researcher_subgraph.mermaid  graph_supervisor_subgraph.mermaid  mypy.ini  pyproject.toml  pytest.ini
combined_summaries/: episode_groupings.json  summary_Building_Capable_Kids_Through_The_Feedback_Formula.json  summary_Confidence_Is_a_Skill.json  summary_Debating_My_Haters__Alpha_Criticisms.json  summary_Geeteshs_Alpha_Transfer_Experience__Refugee_Camp_P.json  summary_Tackling_Parent_Burnout_Boundaries_and_Stress_Mana.json  summary_The_Parent_Mindsets_That_Shape_Alpha_Parent_Tenets.json  summary_The_Powerful_Focus_Strategy_Alpha_Students_Use_Eve.json  summary_The_SAT_Isnt_About_Intelligence_Heres_How_to_Win.json  summary_What_Happens_When_You_Switch_to_Alpha_Ahelis_Catch.json
src/: build_knowledge_graph.py  combined_summary.py  config.py  create_embeddings.py  download_podcasts.py  identify_speakers.py  inspect_chroma.py  inspect_graph.py  investigate_entity.py  main.py  process_pipeline.py  topic_segmentation.py  transcribe_assemblyai.py  transcribe_testing.ipynb
src/analysis/: chroma_lookup.py  graph_insights.py  inspect_chroma.py  inspect_graph.py  inspect_state.py  investigate_entity.py  visualize_chroma.py
src/database/: chroma_manager.py  neo4j_manager.py
src/deep_research_agent/: README.md  chat_cli.py  configuration.py  graph.py  prompts.py  run.py  state.py  tools.py  utils.py
src/llm/: __init__.py  factory.py
src/pipeline/: README.md  __init__.py  download.py  (+8 more)
(+34 files in other folders)
