[project]
name = "learningfocused"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.46.0",
    "feedparser>=6.0.12",
    "ipykernel>=7.1.0",
    "langchain-chroma>=1.0.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "langchain-openai>=1.1.0",
    "chromadb>=1.3.5",
    "langchain-experimental>=0.4.0",
    "neo4j<6.0.0",
    "langchain-neo4j>=0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]
